; ModuleID = '/home/carl/AnghaBench/linux/drivers/vfio/platform/extr_vfio_platform_common.c_vfio_platform_remove_common.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/vfio/platform/extr_vfio_platform_common.c_vfio_platform_remove_common.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vfio_platform_device = type { i32 }
%struct.device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.vfio_platform_device* @vfio_platform_remove_common(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.vfio_platform_device*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %4 = load %struct.device*, %struct.device** %2, align 8
  %5 = call %struct.vfio_platform_device* @vfio_del_group_dev(%struct.device* %4)
  store %struct.vfio_platform_device* %5, %struct.vfio_platform_device** %3, align 8
  %6 = load %struct.vfio_platform_device*, %struct.vfio_platform_device** %3, align 8
  %7 = icmp ne %struct.vfio_platform_device* %6, null
  br i1 %7, label %8, label %20

8:                                                ; preds = %1
  %9 = load %struct.vfio_platform_device*, %struct.vfio_platform_device** %3, align 8
  %10 = getelementptr inbounds %struct.vfio_platform_device, %struct.vfio_platform_device* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @pm_runtime_disable(i32 %11)
  %13 = load %struct.vfio_platform_device*, %struct.vfio_platform_device** %3, align 8
  %14 = call i32 @vfio_platform_put_reset(%struct.vfio_platform_device* %13)
  %15 = load %struct.device*, %struct.device** %2, align 8
  %16 = getelementptr inbounds %struct.device, %struct.device* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.device*, %struct.device** %2, align 8
  %19 = call i32 @vfio_iommu_group_put(i32 %17, %struct.device* %18)
  br label %20

20:                                               ; preds = %8, %1
  %21 = load %struct.vfio_platform_device*, %struct.vfio_platform_device** %3, align 8
  ret %struct.vfio_platform_device* %21
}

declare dso_local %struct.vfio_platform_device* @vfio_del_group_dev(%struct.device*) #1

declare dso_local i32 @pm_runtime_disable(i32) #1

declare dso_local i32 @vfio_platform_put_reset(%struct.vfio_platform_device*) #1

declare dso_local i32 @vfio_iommu_group_put(i32, %struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
